tests/consecutive_errors.check
Token <error>               Line: 1	Column: 1	
Token <error>               Line: 1	Column: 2	
Token <error>               Line: 1	Column: 3	

1,1: error: invalid character
	...
	^

1,2: error: invalid character
	...
	 ^

1,3: error: invalid character
	...
	  ^
